fix placeholder contrast

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
     --secondary-foreground: 0 0% 7%;
 
     --muted: 0 0% 68%;
-    --muted-foreground: 0 0% 100%;
+    --muted-foreground: 215 20% 65%;
 
     --accent: 228 12% 92%;
     --accent-foreground: 0 0% 7%;
@@ -70,7 +70,7 @@
     --secondary-foreground: 0 0% 7%;
 
     --muted: 0 0% 68%;
-    --muted-foreground: 0 0% 100%;
+    --muted-foreground: 215 20% 65%;
 
     --accent: 228 12% 92%;
     --accent-foreground: 0 0% 7%;
